--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -46,8 +46,16 @@
 
 /core/services/webhook @samsondav
 
-# Chainlink Functions related services
+# Chainlink Functions
+core/services/functions @bolekk @justinkaseman @KuphJr @pinebit
 core/services/ocr2/plugins/functions @bolekk @justinkaseman @KuphJr @pinebit
+core/services/s4 @pinebit @bolekk
+core/service/ocr2/plugins/s4 @pinebit @bolekk
+core/services/ocr2/plugins/threshold @KuphJr @bolekk
+core/services/relay/evm/functions.go @bolekk @justinkaseman @KuphJr
+core/services/relay/evm/functions @bolekk @justinkaseman @KuphJr
+core/scripts/functions @bolekk @justinkaseman @KuphJr @pinebit
+core/scripts/gateway @bolekk @pinebit
 
 # API
 /core/web @jkongie
@@ -70,7 +78,6 @@ core/services/ocr2/plugins/functions @bolekk @justinkaseman @KuphJr @pinebit
 /integration-tests/ @smartcontractkit/test-tooling-team
 /integration-tests/**/*keeper* @smartcontractkit/keepers
 /integration-tests/**/*automation* @smartcontractkit/keepers
-
 
 # CI/CD
 /.github/** @chainchad @javuto @jkongie @jmank88 @samsondav
