--- a/integration-tests/load/vrfv2/config.toml
+++ b/integration-tests/load/vrfv2/config.toml
@@ -1,4 +1,4 @@
-# scaling RPS
+# testing one product (jobs + contracts) by varying RPS
 [Soak]
 rps = 1
 duration = "10m"
@@ -8,15 +8,15 @@ rps_from = 1
 rps_to = 5
 duration = "10m"
 
-# scaling jobs
+# testing multiple products (jobs + contracts) by varying instances, deploying more of the same type with stable RPS for each product
 [SoakVolume]
-jobs = 5
+products = 5
 pace = "1s"
 duration = "10m"
 
 [LoadVolume]
-jobs_from = 1
-jobs_to = 5
+products_from = 1
+products_to = 5
 pace = "1s"
 duration = "10m"
 
