--- a/core/scripts/vrfv2/testnet/docker/docker-compose.yml
+++ b/core/scripts/vrfv2/testnet/docker/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - /opt/docker-wait-for-others.sh
       - database:5432
       - --
-    command: chainlink -config /opt/config/base.toml -config /opt/config/rpc-nodes-eth-sepolia.toml -config /opt/config/vrf-primary.toml node start -p /run/secrets/node_password -a /run/secrets/apicredentials
+    command: chainlink -config /opt/config/base.toml -config /opt/config/rpc-nodes.toml -config /opt/config/vrf-primary.toml node start -p /run/secrets/node_password -a /run/secrets/apicredentials
     environment:
       - CL_DATABASE_URL=postgresql://postgres:$CHAINLINK_PGPASSWORD@database:5432/chainlink_0_test?sslmode=disable
     platform: "linux/x86_64"
@@ -25,7 +25,6 @@ services:
     depends_on:
       - database
 
-
   chainlink-node-1:
     container_name: vrf-backup-node
     image: ${NODE_IMAGE_VERSION}
@@ -33,7 +32,7 @@ services:
       - /opt/docker-wait-for-others.sh
       - database:5432
       - --
-    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes-eth-sepolia.toml -config /opt/config/vrf-primary.toml -config /opt/config/vrf-backup.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
+    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes.toml -config /opt/config/vrf-primary.toml -config /opt/config/vrf-backup.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
     environment:
       - CL_DATABASE_URL=postgresql://postgres:$CHAINLINK_PGPASSWORD@database:5432/chainlink_1_test?sslmode=disable
     platform: "linux/x86_64"
@@ -50,7 +49,6 @@ services:
       - node_password
     depends_on:
       - database
-#
 
   chainlink-node-2:
     container_name: bhs-node
@@ -59,7 +57,7 @@ services:
       - /opt/docker-wait-for-others.sh
       - database:5432
       - --
-    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes-eth-sepolia.toml -config /opt/config/bhs.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
+    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes.toml -config /opt/config/bhs.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
     volumes:
       - ./wait-for-others/docker-wait-for-it.sh:/opt/docker-wait-for-it.sh:ro
       - ./wait-for-others/docker-wait-for-others.sh:/opt/docker-wait-for-others.sh:ro
@@ -84,7 +82,7 @@ services:
       - /opt/docker-wait-for-others.sh
       - database:5432
       - --
-    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes-eth-sepolia.toml -config /opt/config/bhs.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
+    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes.toml -config /opt/config/bhs.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
     volumes:
       - ./wait-for-others/docker-wait-for-it.sh:/opt/docker-wait-for-it.sh:ro
       - ./wait-for-others/docker-wait-for-others.sh:/opt/docker-wait-for-others.sh:ro
@@ -109,7 +107,7 @@ services:
       - /opt/docker-wait-for-others.sh
       - database:5432
       - --
-    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes-eth-sepolia.toml -config /opt/config/bhf.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
+    command: chainlink node -config /opt/config/base.toml -config /opt/config/rpc-nodes.toml -config /opt/config/bhf.toml start -p /run/secrets/node_password -a /run/secrets/apicredentials
     volumes:
       - ./wait-for-others/docker-wait-for-it.sh:/opt/docker-wait-for-it.sh:ro
       - ./wait-for-others/docker-wait-for-others.sh:/opt/docker-wait-for-others.sh:ro
