--- a/.github/workflows/on-demand-ocr-soak-test.yml
+++ b/.github/workflows/on-demand-ocr-soak-test.yml
@@ -14,6 +14,7 @@ on:
           - "CELO_MAINNET"
           - "BASE_GOERLI"
           - "BASE_MAINNET"
+          - "BSC_TESTNET"
       fundingPrivateKey:
         description: Private funding key (Skip for Simulated)
         required: false
