--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -154,7 +154,7 @@ jobs:
       - name: Setup Go
         uses: ./.github/actions/setup-go
         with:
-          cache-go-modules: ${{ matrix.split.id == '1' }}
+          cache-go-modules: ${{ contains(matrix.split.id, '1/') }}
       - name: Setup Solana
         uses: ./.github/actions/setup-solana
       - name: Setup wasmd
