--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -38,7 +38,7 @@ optimizer_runs = 10000
 src = 'src/v0.8/dev/automation'
 test = 'src/v0.8/dev/automation/test'
 
-[profile.llo]
+[profile.llo-feeds]
 optimizer_runs = 1000000
 src = 'src/v0.8/llo-feeds'
 test = 'src/v0.8/llo-feeds/test'
