--- a/.github/actions/setup-go/action.yml
+++ b/.github/actions/setup-go/action.yml
@@ -4,12 +4,9 @@ inputs:
   only-modules:
     description: Set to 'true' to only cache modules
     default: 'false'
-  cache-go-modules:
-    description: |
-      Option to cache go modules
-      In matrix jobs the caching will fail in all but the first one to complete and
-      in doing so it will waste time in the pipeline
-    default: 'true'
+  matrix-id:
+    description: Job caches can have key collisions when used in a matrix so we need to pass a unique id in for these cases
+    default: "1"
   cache-version: 
     description: Set this to cache bust
     default: "1"
@@ -36,16 +33,15 @@ runs:
           echo "gobuildcache=$(go env GOCACHE)" >> $GITHUB_OUTPUT
 
       - uses: actions/cache@v3
-        if: ${{ inputs.cache-go-modules == 'true' }}
         name: Cache Go Modules
         with:
           path: |
             ${{ steps.go-cache-dir.outputs.gomodcache }}
           # The lifetime of go modules is much higher than the build outputs, so we increase cache efficiency
           # here by not having the primary key contain the branch name
-          key: ${{ runner.os }}-gomod-${{ inputs.cache-version }}-${{ hashFiles('./go.sum') }}
+          key: ${{ runner.os }}-gomod-${{ inputs.matrix-id }}-${{ inputs.cache-version }}-${{ hashFiles('./go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-gomod-${{ inputs.cache-version }}-
+            ${{ runner.os }}-gomod-${{ inputs.matrix-id }}-${{ inputs.cache-version }}-
 
       - uses: actions/cache@v3
         if: ${{ inputs.only-modules == 'false' }}
