Reading secrets from .env file (#7) (#39)
Co-authored-by: Mateusz Sekara <mateusz.sekara@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,16 @@ cosign.*
 dist/
 MacOSX*
 
+cache
+core/services/ocr2/plugins/ccip/transactions.rlp
+lcov.info
+!core/services/ocr2/plugins/ccip/cache/
+
+
+core/scripts/ccip/json/credentials
+core/scripts/ccip/json/deployments
+core/scripts/ccip/csv/node-wallets
+
 # Test & linter reports
 *report.xml
 *report.json
