--- a/core/scripts/functions/src/sample_config.json
+++ b/core/scripts/functions/src/sample_config.json
@@ -6,6 +6,7 @@
     "MaxRequestBatchSize": 10,
     "DefaultAggregationMethod": 0,
     "UniqueReports": true,
+    "MaxReportTotalCallbackGas": 500000,
 
     "ThresholdOffchainConfig": {
       "MaxQueryLengthBytes": 10000,
