--- a/core/chains/evm/config/toml/defaults/Ethereum_Sepolia.toml
+++ b/core/chains/evm/config/toml/defaults/Ethereum_Sepolia.toml
@@ -1,4 +1,5 @@
 ChainID = '11155111'
+FinalityTagEnabled = true
 LinkContractAddress = '0xb227f007804c16546Bd054dfED2E7A1fD5437678'
 MinContractPayment = '0.1 link'
 
