--- a/core/chains/evm/config/toml/defaults/Linea_Testnet.toml
+++ b/core/chains/evm/config/toml/defaults/Linea_Testnet.toml
@@ -1,1 +1,21 @@
 ChainID = '59140'
+FinalityDepth = 1
+LogPollInterval = '15s'
+MinIncomingConfirmations = 1
+# Linea only emits blocks when a new tx is received, so this method of liveness detection is not useful
+NoNewHeadsThreshold = '0'
+OCR.ContractConfirmations = 1
+
+[GasEstimator]
+Mode = 'L2Suggested'
+# Linea uses the L2Suggested estimator; we don't want to place any limits on the minimum gas price
+PriceMin = '0'
+# Never bump gas on Linea
+BumpThreshold = 0
+
+[GasEstimator.BlockHistory]
+# Force an error if someone enables the estimator by accident; we never want to run the block history estimator on Linea
+BlockHistorySize = 0
+
+[HeadTracker]
+HistoryDepth = 50
